--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-autosuggest": "^9.0.0",
+    "react-dom": "^15.5.4",
+    "react-highcharts": "^11.5.0",
+    "react-tweet-embed": "^1.0.5"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
